--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
     "html5-boilerplate": "^5.3.0",
-    "angular-resource": "^1.6.5"
+    "angular-resource": "^1.6.5",
+    "angular-bootstrap": "^2.5.0",
+    "underscore": "latest"
   },
   "resolutions": {
     "angular": "~1.5.0"
